# geno-tasks

./: GENO.md  README.md  genotools.yaml  pyproject.toml
geno_tasks/: __init__.py  cli.py  deploy.py  paths.py  provider.py  tasks.py
skills/geno-tasks/: SKILL.md
skills/watch/: SKILL.md
